--- a/Common/Conf/config.yaml
+++ b/Common/Conf/config.yaml
@@ -16,6 +16,6 @@ DEFAULT_MODULE: Main
 SESSION_AUTO_START: false
 
 #URL_CASE_INSENSITIVE 是否区分大小写
-URL_CASE_INSENSITIVE: true
+URL_CASE_INSENSITIVE: false
 URL_ROUTER_ON: true
 
